--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -10,7 +10,7 @@
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Choi, G., Liu, L., & Mahadevan, L. <br>
               Explosive rigidity percolation in kirigami. <br>
-              Proceedings of the Royal Society A, 479(2271), 20220798, 2023..</p>
+              Proceedings of the Royal Society A, 479(2271), 20220798, 2023.</p>
             [
             <a href="https://royalsocietypublishing.org/doi/10.1098/rspa.2022.0798">Paper</a> /
             <a href="https://github.com/lliu12/percolation_sim">Code</a> ]
@@ -29,6 +29,7 @@
             <!-- <a href="https://arxiv.org/abs/2209.12006">Paper</a> / -->
             <a href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/dbef234be68d8b170240511639610fd1-Abstract-Conference.html">Paper</a> /
             <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
+            <a href = "https://github.com/sarah-keren/RLPE"> Code </a>
             ]
           </td>
         </tr>
