--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,8 @@ layout: default
     {{ content }}
   </div>
   <div class="col-md-6">
-    <img src="{{ site.github.url }}/assets/img/lucyliu_photo_2021.jpg" alt="Home" width="85%">
+    <!-- <img src="{{ site.github.url }}/assets/img/lucyliu_photo_2021.jpg" alt="Photo" width="85%"> -->
+    <img src="{{ site.github.url }}/assets/img/lucyliu_photo_july2023_2.jpg" alt="Photo" width="70%">
   </div>
 </div>
 
