--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,9 @@ layout: default
     {{ content }}
   </div>
   <div class="col-md-6">
-    <img src="{{ site.github.url }}/assets/img/lucyliu_photo_2021.jpg" alt="Photo" width="75%">
+    <div class="text-center">
+      <img src="{{ site.github.url }}/assets/img/lucyliu_photo_2021.jpg" alt="Photo of person" width="80%">
+    </div>
   </div>
 </div>
 
