--- a/_includes/writing.html
+++ b/_includes/writing.html
@@ -10,6 +10,7 @@
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p><a href="https://www.wired.com/story/i-asked-an-algorithm-to-optimize-my-life/">I Asked an Algorithm to Optimize My Life. Here's What Happened.</a><br>
               Wired, March 2023.</p>
+            <p><i>In BBC's </i> <a href="https://www.bbc.co.uk/sounds/play/m001xlz2">The Artificial Human</a></p>
           </td>
         </tr>
 
