--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -71,6 +71,7 @@
             <p>Liu, L.*, Choi, G.*, & Mahadevan, L. <br>
               Wallpaper group kirigami. <br>
               Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
+            <p><i>Quilt inspired by this work in </i> <a href="https://www.unfiguring.org">Unfiguring</a></p>
             [
             <a href="https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867">Paper</a>
             ]
