--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,7 +6,7 @@ $linkColor: #212529 !important;
 body {
   background: $backgroundColor;
   color: $bodyColor;
-  font-family: "Inter" // $bodyFont;
+  font-family: $bodyFont;
 }
 
 body a {
